Resubmit of ECIP command fix